Fix possible namespacing issues

--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -3,10 +3,14 @@
 // .modal-dialog    - positioning shell for the actual modal
 // .modal-content   - actual modal w/ bg and corners and shit
 
-
-// Kill the scroll on the body
 .modal-open {
+    // Kill the scroll on the body
     overflow: hidden;
+
+    .modal {
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
 }
 
 // Container that the modal scrolls within
@@ -27,10 +31,15 @@
     // iOS Safari bug: https://bugs.webkit.org/show_bug.cgi?id=158342
     // See also https://github.com/twbs/bootstrap/issues/17695
     //-webkit-overflow-scrolling: touch;
-}
-.modal-open .modal {
-    overflow-x: hidden;
-    overflow-y: auto;
+
+    // When fading in the modal, animate it to slide down
+    &.fade .modal-dialog {
+        @include transition($modal-transition);
+        transform: translate(0, -25%);
+    }
+    &.in .modal-dialog {
+        transform: translate(0, 0);
+    }
 }
 
 // Shell div to position the modal with bottom padding
@@ -41,15 +50,6 @@
     direction: ltr;
     // Allow clicks to pass through for custom click handling to close modal
     pointer-events: none;
-
-    // When fading in the modal, animate it to slide down
-    .modal.fade & {
-        @include transition($modal-transition);
-        transform: translate(0, -25%);
-    }
-    .modal.in & {
-        transform: translate(0, 0);
-    }
 }
 
 .modal-dialog-centered {
